fix(dropdown): left and right menu positioning regression
This PR fixes the first level of simple dropdown inside the right menu
was cropped and out of the screen when the parent menu item has short
text, and the dropdown doesn't specify the class name `left`.

To avoid this, all dropdown inside the right menu will be forced to
appear leftward by default. The dropdown can also appear leftward or
rightward by having `left` or `right` class name.

This PR also fix the dropdown inside the buttons which are positioned
incorrectly.

--- a/src/definitions/modules/dropdown.less
+++ b/src/definitions/modules/dropdown.less
@@ -318,9 +318,10 @@
 }
 
 /* Automatically float dropdown menu right on last menu item */
-.ui.menu .right.menu .dropdown:last-child .menu:not(.left),
-.ui.menu .right.dropdown.item .menu:not(.left),
-.ui.buttons > .ui.dropdown:last-child .menu:not(.left) {
+.ui.menu .right.menu .dropdown:last-child > .menu:not(.left),
+.ui.menu .right.dropdown.item > .menu:not(.left),
+.ui.buttons > .ui.dropdown:last-child > .menu:not(.left) {
+  left: auto;
   right: 0;
 }
 
@@ -1096,7 +1097,7 @@ select.ui.dropdown {
 
   .ui.dropdown > .left.menu .menu,
   .ui.dropdown .menu .left.menu {
-    left: auto !important;
+    left: auto;
     right: 100%;
     margin: @leftSubMenuMargin !important;
     border-radius: @leftSubMenuBorderRadius !important;
@@ -1324,6 +1325,13 @@ select.ui.dropdown {
     top: 0 !important;
     left: 100%;
     opacity: 1;
+  }
+  .ui.simple.dropdown > .menu > .item:active > .left.menu,
+  .ui.simple.dropdown .menu .item:hover > .left.menu, 
+  .right.menu .ui.simple.dropdown > .menu > .item:active > .menu:not(.right), 
+  .right.menu .ui.simple.dropdown > .menu .item:hover > .menu:not(.right) {
+    left: auto;
+    right: 100%;
   }
   & when (@variationDropdownDisabled) {
     .ui.simple.disabled.dropdown:hover .menu {
